# rest-tui-crud-admin

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.yaml  models.example.yaml
src/: config.rs  lib.rs  main.rs
src/api/: handler.rs
src/app/: keymap.rs  mod.rs  popup.rs  state.rs  ui.rs
src/inputs/: key.rs
src/io/: handler.rs  mod.rs
