[package]
name = "plop-tui"
version = "0.1.2"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ilaborie/plop-tui"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"

ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }

dotenvy = "0.15"
eyre = "0.6"
reqwest = { version = "0.13.2", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
